-
Bug
-
Resolution: Fixed
-
Medium
-
None
-
None
-
3
-
9223372036854775807
Breaking Lustre because of missing kallsyms_lookup_name() isn't really workable.
There needs to be suitable alternatives for:
alloc_workqueue_attrs() / alloc_workqueue_attrs() ... nice but not critical
vfree_atomic() – not needed from v4.10? vfree will call vfree_atomic() when in_interrupt() is true.
Unfortunately we have no way to detect this via configure (aside from guessing based on kernel version).
So just copy the kernel implementation into Luster instead?