LU-19514 compat: alloc_workqueue_attrs_noprof

Linux commit v6.16-rc1-2-gfda6add92438
  workqueue: Basic memory allocation profiling support

Adjust the name of alloc_workqueue_attrs_noprof and fallback to
alloc_workqueue_attrs for older kernels

Test-Parameters: trivial
Fixes: b18bfc7c793 ("LU-18687 compat: improve cfs_kallsyms_lookup_name()")
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I0cdab19c000e394d393ad81cdf79070f8d63cb94
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/62138
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Timothy Day <timday@amazon.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>